Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76749

Crash when using an animation while destroying an item

XMLWordPrintable

    • 732b63ed0cd38feebd17978abde2843eddd2b7b2 (qt/qtdeclarative/dev) 38b3504e972281f4b79d78ad325686863fdafcd5 (qt/qtdeclarative/5.12)

      Attached application crashes after clicking the button which destroys the item itself. It seems to be related to where the animation object is.

      1   QQuickAbstractAnimation::notifyRunningChanged           qquickanimation.cpp       152  0x7fffe8df7cce 
      2   QQuickBehaviorPrivate::animationStateChanged            qquickbehavior.cpp        147  0x7fffe8e2be9d 
      3   QAbstractAnimationJob::stateChanged                     qabstractanimationjob.cpp 593  0x7ffff7501cf9 
      4   QAbstractAnimationJob::~QAbstractAnimationJob           qabstractanimationjob.cpp 283  0x7ffff7502fe9 
      5   QQuickBulkValueAnimator::~QQuickBulkValueAnimator       qquickanimation.cpp       1966 0x7fffe8df6319 
      6   QQuickBulkValueAnimator::~QQuickBulkValueAnimator       qquickanimation.cpp       1969 0x7fffe8df6325 
      7   QQuickBehavior::~QQuickBehavior                         qquickbehavior.cpp        112  0x7fffe8e2be21 
      8   QQmlPrivate::QQmlElement<QQuickBehavior>::~QQmlElement  qqmlprivate.h             108  0x7fffe8de3254 
      9   QQmlPrivate::QQmlElement<QQuickBehavior>::~QQmlElement  qqmlprivate.h             108  0x7fffe8de3254 
      10  QObjectPrivate::deleteChildren                          qobject.cpp               2016 0x7ffff6e1b658 
      11  QObject::~QObject                                       qobject.cpp               1032 0x7ffff6e1c889 
      12  QQuickItem::~QQuickItem                                 qquickitem.cpp            2383 0x7fffe8f0e51e 
      13  QQuickRectangle::~QQuickRectangle                       qquickrectangle_p.h       156  0x7fffe8f3623d 
      14  QQmlPrivate::QQmlElement<QQuickRectangle>::~QQmlElement qqmlprivate.h             108  0x7fffe8f3623d 
      15  QQmlPrivate::QQmlElement<QQuickRectangle>::~QQmlElement qqmlprivate.h             108  0x7fffe8f3623d 
      16  qDeleteInEventHandler                                   qobject.cpp               4655 0x7ffff6e13eb6 
      17  QObject::event                                          qobject.cpp               1251 0x7ffff6e15c0a 
      18  QQuickItem::event                                       qquickitem.cpp            8105 0x7fffe8f0b858 
      19  QApplicationPrivate::notify_helper                      qapplication.cpp          3737 0x7ffff78347c8 
      20  QApplication::notify                                    qapplication.cpp          3093 0x7ffff783c0ae 
      ... <More>                                                                                                
      

        1. bug-1.png
          293 kB
          Felinor Rain
        2. qtbug76749.tar.gz
          1.0 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-76749
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            poikelin Joni Poikelin
            Votes:
            5 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes