Check that animation still exists

Fixes: QTBUG-76749
Change-Id: Ie5eed240e8190a7297f71f5e40870a007e737d1d
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 732b63ed0cd38feebd17978abde2843eddd2b7b2)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>